--- a/scripts/test/llikEmulator_tests.Rmd
+++ b/scripts/test/llikEmulator_tests.Rmd
@@ -57,7 +57,7 @@ G_old <- function(u, ...) cbind(y1=u*G1_mat, y2=u*G2_mat)
 
 # Ground truth.  
 u_true <- matrix(runif(1, min=u_bound_lower, max=u_bound_upper), nrow=1)
-sig2_true <- c(1, 1.5)
+sig2_true <- setNames(c(1, 1.5), output_names)
 G_true <-  G(u_true)[,1,]
 
 # Simulate data, adding missing observations. 
@@ -172,6 +172,11 @@ for(i in 1:llik_sum_emulator$N_terms) {
 #
 # Plot llik samples: individual outputs and combined llik. 
 #
+
+llik_sum_emulator$plot_llik_samp_1d(test_info$inputs, lik_par_val=sig2_true, N_samp=50, 
+                                    true_llik_new=llik_true, include_design=TRUE, sum_terms=FALSE,
+                                    use_cov=TRUE)
+
 
 llik_sum_emulator$llik_emulator_terms$output2$plot_llik_samp_1d(test_info$inputs, lik_par_val=sig2_true[2], 
                                                                 N_samp=50, use_cov=TRUE,
