--- a/scripts/test/mcmc_gp_noisy_tests.Rmd
+++ b/scripts/test/mcmc_gp_noisy_tests.Rmd
@@ -139,12 +139,109 @@ llik_sum_emulator <- llikSumEmulator(llik_emulator_list, default_conditional=FAL
 
 
 ```{r}
+#
+# Run noisy MCMC. 
+#
+# TODO: add option to `format_mcmc_output` that allows selected names from the `samp_list`. 
 
 samp_list <- mcmc_gp_noisy(llik_sum_emulator, theta_prior_params, par_init=linear_Gaussian_info$true_posterior$mean[,1], 
-                           sig2_init=linear_Gaussian_info$true_posterior$Cov, 
-                           sig2_prior_params=NULL, N_itr=50000, adapt_C=FALSE,
-                           adapt_scale=FALSE, use_gp_cov=TRUE)
+                           sig2_init=NULL, sig2_prior_params=NULL, N_itr=N_mcmc,
+                           adapt_cov_prop=FALSE, adapt_scale=FALSE, use_gp_cov=TRUE,
+                           cov_prop=linear_Gaussian_info$true_posterior$Cov, SSR_sample_adjustment="truncated")
 
+mcmc_samp_dt <- format_mcmc_output(samp_list["par"], test_label="mcmc_gp_noisy_cov_trunc")
+```
+
+```{r}
+#
+# Run noisy MCMC: Rectified. 
+#
+# TODO: add option to `format_mcmc_output` that allows selected names from the `samp_list`. 
+
+samp_list <- mcmc_gp_noisy(llik_sum_emulator, theta_prior_params, par_init=linear_Gaussian_info$true_posterior$mean[,1], 
+                           sig2_init=NULL, sig2_prior_params=NULL, N_itr=N_mcmc,
+                           adapt_cov_prop=FALSE, adapt_scale=FALSE, use_gp_cov=TRUE,
+                           cov_prop=linear_Gaussian_info$true_posterior$Cov, SSR_sample_adjustment="rectified")
+
+mcmc_samp_dt <- rbindlist(list(mcmc_samp_dt, format_mcmc_output(samp_list["par"], test_label="mcmc_gp_noisy_cov_rect")), use.names=TRUE)
+```
+
+```{r}
+#
+# Run noisy MCMC: No Cov.  
+#
+# TODO: add option to `format_mcmc_output` that allows selected names from the `samp_list`. 
+
+samp_list <- mcmc_gp_noisy(llik_sum_emulator, theta_prior_params, par_init=linear_Gaussian_info$true_posterior$mean[,1], 
+                           sig2_init=NULL, sig2_prior_params=NULL, N_itr=N_mcmc,
+                           adapt_cov_prop=FALSE, adapt_scale=FALSE, use_gp_cov=FALSE,
+                           cov_prop=linear_Gaussian_info$true_posterior$Cov, SSR_sample_adjustment="rectified")
+
+mcmc_samp_dt <- rbindlist(list(mcmc_samp_dt, format_mcmc_output(samp_list["par"], test_label="mcmc_gp_noisy_cov_rect_nocov")), use.names=TRUE)
+```
+
+
+```{r}
+# Append exact posterior samples. 
+N_samp_exact <- N_mcmc
+samp_exact <- t(drop(linear_Gaussian_info$true_posterior$mean) + 
+                t(chol(linear_Gaussian_info$true_posterior$Cov)) %*% matrix(rnorm(D*N_samp_exact), nrow=D, ncol=N_samp_exact))
+samp_exact_dt <- as.data.table(samp_exact)
+colnames(samp_exact_dt) <- computer_model_data$pars_cal_names
+samp_exact_dt[, c("param_type", "itr", "test_label") := list("par", 1:N_samp_exact, "exact")]
+samp_exact_dt <- melt.data.table(samp_exact_dt, id.vars=c("param_type", "itr", "test_label"), 
+                                 variable.name="param_name", value.name="sample")
+
+mcmc_samp_dt <- rbindlist(list(mcmc_samp_dt, samp_exact_dt), use.names=TRUE)
+```
+
+
+```{r}
+# Trace plots. 
+if(write_mode) {
+  trace_plots <- get_trace_plots(mcmc_samp_dt, param_types="par", save_dir=plot_dir)
+  hist_plots <- get_hist_plot_comparisons(mcmc_samp_dt, param_types="par", test_label_baseline="exact", 
+                                          xlab="samples", ylab="density", bins=30, save_dir=plot_dir,
+                                          burn_in_start=as.integer(0.5*N_mcmc))
+}
+
+for(plt in trace_plots) plot(plt)
+for(plt in hist_plots) plot(plt)
+
+```
+
+
+```{r}
+plt_test <- get_hist_plot_comparisons(mcmc_samp_dt, param_types="par", 
+                          xlab="samples", ylab="density", bins=30,
+                          burn_in_start=as.integer(0.5*N_mcmc), test_labels="exact")
+
+for(plt in plt_test) plot(plt)
+```
+
+```{r}
+plt2_test <- get_hist_plot_comparisons(mcmc_samp_dt, param_types="par", 
+                          xlab="samples", ylab="density", bins=30,
+                          burn_in_start=as.integer(0.5*N_mcmc), test_labels="mcmc_gp_noisy_cov_trunc")
+
+for(plt in plt2_test) plot(plt)
+```
+
+```{r}
+stdevs <- mcmc_samp_dt[itr>=as.integer(0.5*N_mcmc), sd(sample), by=c("param_name", "test_label")]
+setorder(stdevs, "param_name")
+stdevs
+```
+
+
+```{r}
+hist_plots2 <- get_hist_plot_comparisons(mcmc_samp_dt, param_types="par", 
+                                         test_label_baseline="mcmc_gp_noisy_cov_trunc", 
+                                         xlab="samples", ylab="density", bins=30,
+                                         burn_in_start=as.integer(0.5*N_mcmc), 
+                                         test_labels = "mcmc_gp_noisy_cov_rect")
+
+for(plt in hist_plots2) plot(plt)
 ```
 
 
