--- a/scripts/test/gpWrapper_tests.Rmd
+++ b/scripts/test/gpWrapper_tests.Rmd
@@ -19,6 +19,7 @@ base_dir <- getwd()
 src_dir <- file.path(base_dir, "src")
 
 source(file.path(src_dir, "gpWrapper.r"))
+source(file.path(src_dir, "statistical_helper_functions.r"))
 ```
 
 ```{r}
